# open-esp-agent

components/claw_modules/claw_agent_flow/: ARCHITECTURE.md  CMakeLists.txt  Kconfig
components/claw_modules/claw_agent_flow/examples/: app_claw_integration_example.c
components/claw_modules/claw_agent_flow/include/: claw_agent_context_pipeline.h  claw_agent_flow.h  claw_agent_state_machine.h  claw_agent_tool_orchestrator.h
components/claw_modules/claw_agent_flow/src/: claw_agent_context_pipeline.c  claw_agent_flow.c  claw_agent_state_machine.c  claw_agent_tool_orchestrator.c
